--- a/Squareify/Base.lproj/Main.storyboard
+++ b/Squareify/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D87p" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IQd-dk-E0j">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IQd-dk-E0j">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -285,8 +285,8 @@
                                 <rect key="frame" x="0.0" y="320" width="320" height="248"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EE3-xi-jyn" userLabel="Bottom Content">
-                                <rect key="frame" x="-640" y="320" width="960" height="248"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EE3-xi-jyn" userLabel="Bottom Content">
+                                <rect key="frame" x="0.0" y="320" width="960" height="248"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="white" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HHG-qL-iqb">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="248"/>
@@ -555,6 +555,15 @@
                                     <outlet property="delegate" destination="blJ-Ad-SC4" id="ESG-7f-bdq"/>
                                 </connections>
                             </adBannerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xQR-7p-jYk" userLabel="Colors Container">
+                                <rect key="frame" x="0.0" y="363" width="320" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="HfF-s6-4Zo"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="mUy-Xf-Wgu" kind="embed" id="2Ex-uA-9LE"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.99997437000274658" blue="0.99999129772186279" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
@@ -587,8 +596,11 @@
                             <constraint firstItem="K4F-yr-JC9" firstAttribute="top" secondItem="EE3-xi-jyn" secondAttribute="bottom" id="fAi-Vg-wia"/>
                             <constraint firstItem="K4F-yr-JC9" firstAttribute="leading" secondItem="J3h-qN-MqL" secondAttribute="leading" id="hZ1-Hc-tiH"/>
                             <constraint firstAttribute="bottom" secondItem="K4F-yr-JC9" secondAttribute="bottom" id="hhT-ca-L8V"/>
+                            <constraint firstItem="xQR-7p-jYk" firstAttribute="leading" secondItem="J3h-qN-MqL" secondAttribute="leading" id="hmD-AT-Gr8"/>
                             <constraint firstItem="6fM-0Q-KWN" firstAttribute="top" secondItem="J3h-qN-MqL" secondAttribute="top" id="iSq-O7-nD9"/>
+                            <constraint firstAttribute="bottom" secondItem="xQR-7p-jYk" secondAttribute="bottom" id="kOG-Gk-FJj"/>
                             <constraint firstItem="K4F-yr-JC9" firstAttribute="top" secondItem="jxh-fI-rm0" secondAttribute="bottom" id="kwa-iC-89j"/>
+                            <constraint firstAttribute="trailing" secondItem="xQR-7p-jYk" secondAttribute="trailing" id="kz2-2V-Af6"/>
                             <constraint firstItem="Inz-DY-7At" firstAttribute="top" secondItem="Dzm-rC-b07" secondAttribute="bottom" id="lAp-Mf-DuT"/>
                             <constraint firstAttribute="width" secondItem="jMm-3V-9o0" secondAttribute="width" id="lWM-xp-AA5"/>
                             <constraint firstAttribute="trailing" secondItem="6fM-0Q-KWN" secondAttribute="trailing" id="lvQ-fD-U9F"/>
@@ -698,7 +710,7 @@
                 <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspect" id="u0K-Pu-dOF" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U9P-k9-JSt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-29.5" y="-111"/>
+            <point key="canvasLocation" x="216.5" y="-78"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0Nq-tw-Hjd">
@@ -724,6 +736,85 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BcI-DB-bbV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-444" y="-675"/>
+        </scene>
+        <!--Color Controller-->
+        <scene sceneID="mUa-bx-e4A">
+            <objects>
+                <viewController title="Color Controller" automaticallyAdjustsScrollViewInsets="NO" id="mUy-Xf-Wgu" customClass="ColorCollection" customModule="Squareify" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mza-ve-pn9"/>
+                        <viewControllerLayoutGuide type="bottom" id="pLH-YJ-Cb6"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Px8-wN-P90">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="205"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Ca-9b-yhS">
+                                <rect key="frame" x="0.0" y="5" width="320" height="200"/>
+                                <color key="backgroundColor" red="0.96038510099999996" green="0.96038510099999996" blue="0.96038510099999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dS5-hB-oWF">
+                                    <size key="itemSize" width="100" height="95"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="color" id="0RA-Fn-qhS" customClass="ColorCell" customModule="Squareify" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="95"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quirky Blue" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZtK-eO-3Xt">
+                                                    <rect key="frame" x="10" y="10" width="80" height="75"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" red="0.0" green="0.66552187929999995" blue="0.86602351639999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="ZtK-eO-3Xt" secondAttribute="bottom" constant="10" id="7ky-mt-iTL"/>
+                                            <constraint firstAttribute="trailing" secondItem="ZtK-eO-3Xt" secondAttribute="trailing" constant="10" id="8kW-5i-MLq"/>
+                                            <constraint firstItem="ZtK-eO-3Xt" firstAttribute="top" secondItem="0RA-Fn-qhS" secondAttribute="top" constant="10" id="OAy-Or-l5a"/>
+                                            <constraint firstItem="ZtK-eO-3Xt" firstAttribute="leading" secondItem="0RA-Fn-qhS" secondAttribute="leading" constant="10" id="R6q-d7-lmS"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="name" destination="ZtK-eO-3Xt" id="jLZ-Fs-cAD"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="mUy-Xf-Wgu" id="C7H-yU-Syz"/>
+                                    <outlet property="delegate" destination="mUy-Xf-Wgu" id="yHP-49-BAr"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.70196080207824707" green="0.70196080207824707" blue="0.70196080207824707" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="2Ca-9b-yhS" firstAttribute="leading" secondItem="Px8-wN-P90" secondAttribute="leading" id="Qew-Lz-2AK"/>
+                            <constraint firstItem="pLH-YJ-Cb6" firstAttribute="top" secondItem="2Ca-9b-yhS" secondAttribute="bottom" id="SbL-uI-0AI"/>
+                            <constraint firstItem="2Ca-9b-yhS" firstAttribute="top" secondItem="Mza-ve-pn9" secondAttribute="bottom" constant="5" id="aYF-u0-dTK"/>
+                            <constraint firstAttribute="trailing" secondItem="2Ca-9b-yhS" secondAttribute="trailing" id="gBb-w9-MgG"/>
+                            <constraint firstItem="2Ca-9b-yhS" firstAttribute="top" secondItem="Mza-ve-pn9" secondAttribute="bottom" id="rS8-H1-WAX"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="rS8-H1-WAX"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <toolbarItems/>
+                    <connections>
+                        <outlet property="collection" destination="2Ca-9b-yhS" id="V3d-e4-SNO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ysy-V4-QmK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-397" y="-174"/>
         </scene>
     </scenes>
     <resources>
